# apps/grincajg_api/lib/grincajg_api_web/router.ex
@@ -31,8 +31,8 @@ defmodule GrincajgApiWeb.Router do
   # PROTECTED ROUTE
   scope "/api", GrincajgApiWeb do
     pipe_through [:api, :auth]
-    get "/accounts/me", AccountController, :me_account
-    get "/accounts/me_organization", AccountController, :me_organization
+    get "/accounts/account_user", AccountController, :account_user
+    get "/accounts/account_user_with_organization", AccountController, :account_user_with_organization
     get "/accounts/sign_out", AccountController, :sign_out
     get "/accounts/refresh_session", AccountController, :refresh_session
     post "/accounts/update", AccountController, :update
